--- a/.github/workflows/main_app-cloudresume-prod-westus-001.yml
+++ b/.github/workflows/main_app-cloudresume-prod-westus-001.yml
@@ -19,13 +19,15 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: "20.x"
 
       - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
+          mv .next/static .next/standalone/.next/static
+          mv public .next/standalone/public
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -40,7 +42,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -53,7 +55,7 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -61,11 +63,10 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_E89F7EA29BC641F4B7FA2EEE0E00B148 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_19D4B403897E467FACC2AB095A2753B1 }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: "Deploy to Azure Web App"
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'app-cloudresume-prod-westus-001'
-          slot-name: 'Production'
+          app-name: "app-cloudresume-prod-westus-001"
+          slot-name: "Production"
           package: .
-          
