--- a/.github/workflows/main_app-cloudresume-prod-westus-001.yml
+++ b/.github/workflows/main_app-cloudresume-prod-westus-001.yml
@@ -26,8 +26,9 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-          mv .next/static .next/standalone/.next/static
-          mv public .next/standalone/public
+
+      - name: move folders
+        run: mv .next/static .next/standalone/.next/static
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
