--- a/.github/workflows/main_app-cloudresume-prod-westus-001.yml
+++ b/.github/workflows/main_app-cloudresume-prod-westus-001.yml
@@ -27,8 +27,10 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
-      - name: move folders
-        run: mv .next/static .next/standalone/.next/static
+      - name: Prepare the standalone build for deployment
+        run: |
+          mv .next/static .next/standalone/.next/static
+          zip -r release.zip .next/standalone/ .next/static package.json node_modules
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
