--- a/.github/workflows/main_app-cloudresume-prod-westus-001.yml
+++ b/.github/workflows/main_app-cloudresume-prod-westus-001.yml
@@ -30,10 +30,10 @@ jobs:
       - name: Prepare the standalone build for deployment
         run: |
           mv .next/static .next/standalone/.next/static
-          zip -r release.zip .next/standalone/ .next/static package.json node_modules
+	  mv public .next/standalone/public
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip .next/standalone/ .next/static package.json node_modules
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
