--- a/.github/workflows/main_app-cloudresume-prod-westus-001.yml
+++ b/.github/workflows/main_app-cloudresume-prod-westus-001.yml
@@ -31,9 +31,7 @@ jobs:
         run: |
           mv .next/static .next/standalone/.next/static
 	  mv public .next/standalone/public
-
-      - name: Zip artifact for deployment
-        run: zip -r release.zip .next/standalone/ .next/static package.json node_modules
+	  zip -r release.zip .next/standalone/ .next/static package.json node_modules
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
