Yaml indentation issues

--- a/.github/workflows/main_app-cloudresume-prod-westus-001.yml
+++ b/.github/workflows/main_app-cloudresume-prod-westus-001.yml
@@ -30,10 +30,11 @@ jobs:
       - name: Prepare the standalone build for deployment
         run: |
           mv .next/static .next/standalone/.next/static
-	  mv public .next/standalone/public
+          mv public .next/standalone/public
 
       - name: Zip file for deployment
-	run: zip -r release.zip .next/standalone/ .next/static package.json node_modules
+        run: |
+          zip -r release.zip .next/standalone/ .next/static package.json node_modules
 
 
       - name: Upload artifact for deployment job
