--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@heroicons/react": "^2.1.5",
 		"@nextui-org/button": "2.0.38",
 		"@nextui-org/code": "2.0.33",
 		"@nextui-org/input": "2.2.5",
@@ -29,6 +30,7 @@
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
+		"react-card-flip": "^1.2.3",
 		"react-dom": "18.3.1"
 	},
 	"devDependencies": {
